add queues and add k8s auth files to harvester

--- a/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
+++ b/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
@@ -288,7 +288,178 @@
 
       "submitter": {
 	  "ceQueueName": "rubin",
-          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot_slac.sdf"
+	  "ceARCGridType": "arc",
+	  "ceHostname": "sdfarcce001.slac.stanford.edu",
+	  "ceEndpoint": "https://sdfarcce001.slac.stanford.edu:9443/arex/rest/1.0",
+          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot_push.sdf"
+      }
+  },
+
+  "SLAC_Rubin": {
+    "queueStatus": "online",
+    "prodSourceLabel": "managed",
+    "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
+    "templateQueueName": "production.pull",
+    "maxWorkers": 1000,
+    "maxNewWorkersPerCycle":20,
+    "nQueueLimitWorkerRatio": 200,
+    "nQueueLimitWorkerMin":3,
+    "nQueueLimitWorkerMax": 100,
+    "nQueueLimitJobMax":10000,
+    "nQueueLimitJobMin":1200,
+    "nQueueLimitJob": 10000,
+    "nQueueLimitWorker":50,
+
+    "submitter": {
+          "ceQueueName": "rubin",
+          "ceARCGridType": "arc",
+	  "ceHostname": "sdfarcce001.slac.stanford.edu",
+          "ceEndpoint": "https://sdfarcce001.slac.stanford.edu:9443/arex/rest/1.0",
+          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot_pull.sdf"
+      }
+  },
+
+  "SLAC_Rubin_Medium": {
+    "queueStatus": "online",
+    "prodSourceLabel": "managed",
+    "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
+    "templateQueueName": "production.pull",
+    "maxWorkers": 700,
+    "maxNewWorkersPerCycle":20,
+    "nQueueLimitWorkerRatio": 500,
+    "nQueueLimitWorkerMin":3,
+    "nQueueLimitWorkerMax": 40,
+    "nQueueLimitJobMax":10000,
+    "nQueueLimitJobMin":1200,
+    "nQueueLimitJob": 10000,
+    "nQueueLimitWorker":50,
+
+    "submitter": {
+          "ceQueueName": "rubin",
+          "ceARCGridType": "arc",
+	  "ceHostname": "sdfarcce001.slac.stanford.edu",
+          "ceEndpoint": "https://sdfarcce001.slac.stanford.edu:9443/arex/rest/1.0",
+          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot_pull.sdf"
+      }
+  },
+
+  "SLAC_Rubin_Himem": {
+    "queueStatus": "online",
+    "prodSourceLabel": "managed",
+    "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
+    "templateQueueName": "production.pull",
+    "maxWorkers": 700,
+    "maxNewWorkersPerCycle":20,
+    "nQueueLimitWorkerRatio": 500,
+    "nQueueLimitWorkerMin":3,
+    "nQueueLimitWorkerMax": 40,
+    "nQueueLimitJobMax":10000,
+    "nQueueLimitJobMin":1200,
+    "nQueueLimitJob": 10000,
+    "nQueueLimitWorker":50,
+
+    "submitter": {
+          "ceQueueName": "rubin_himem",
+          "ceARCGridType": "arc",
+	  "ceHostname": "sdfarcce001.slac.stanford.edu",
+          "ceEndpoint": "https://sdfarcce001.slac.stanford.edu:9443/arex/rest/1.0",
+          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot_pull.sdf"
+      }
+  },
+
+  "SLAC_Rubin_Extra_Himem": {
+    "queueStatus": "online",
+    "prodSourceLabel": "managed",
+    "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
+    "templateQueueName": "production.push",
+    "maxWorkers": 50,
+    "maxNewWorkersPerCycle":20,
+    "nQueueLimitWorkerRatio": 500,
+    "nQueueLimitWorkerMin":3,
+    "nQueueLimitWorkerMax": 40,
+    "nQueueLimitJobMax":10000,
+    "nQueueLimitJobMin":1200,
+    "nQueueLimitJob": 10000,
+    "nQueueLimitWorker":50,
+
+    "submitter": {
+          "ceQueueName": "rubin_extra_himem",
+          "ceARCGridType": "arc",
+	  "ceHostname": "sdfarcce001.slac.stanford.edu",
+          "ceEndpoint": "https://sdfarcce001.slac.stanford.edu:9443/arex/rest/1.0",
+          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot_push.sdf"
+      }
+  },
+
+  "SLAC_Rubin_Merge": {
+    "queueStatus": "online",
+    "prodSourceLabel": "managed",
+    "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
+    "templateQueueName": "production.push",
+    "maxWorkers": 50,
+    "maxNewWorkersPerCycle":20,
+    "nQueueLimitWorkerRatio": 500,
+    "nQueueLimitWorkerMin":3,
+    "nQueueLimitWorkerMax": 40,
+    "nQueueLimitJobMax":10000,
+    "nQueueLimitJobMin":1200,
+    "nQueueLimitJob": 10000,
+    "nQueueLimitWorker":50,
+
+    "submitter": {
+          "ceQueueName": "rubin_merge",
+          "ceARCGridType": "arc",
+	  "ceHostname": "sdfarcce001.slac.stanford.edu",
+          "ceEndpoint": "https://sdfarcce001.slac.stanford.edu:9443/arex/rest/1.0",
+          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot_push.sdf"
+      }
+  },
+
+  "SLAC_Rubin_SDF": {
+    "queueStatus": "online",
+    "prodSourceLabel": "managed",
+    "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
+    "templateQueueName": "production.pull",
+    "maxWorkers": 700,
+    "maxNewWorkersPerCycle":20,
+    "nQueueLimitWorkerRatio": 200,
+    "nQueueLimitWorkerMin":3,
+    "nQueueLimitWorkerMax": 20,
+    "nQueueLimitJobMax":10000,
+    "nQueueLimitJobMin":1200,
+    "nQueueLimitJob": 10000,
+    "nQueueLimitWorker":50,
+
+    "submitter": {
+          "ceQueueName": "rubin",
+          "ceARCGridType": "arc",
+	  "ceHostname": "sdfarcce001.slac.stanford.edu",
+          "ceEndpoint": "https://arcce1.slac.stanford.edu:9443/arex/rest/1.0",
+          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot_pull.sdf"
+      }
+  },
+
+  "SLAC_Rubin_SDF_Big": {
+    "queueStatus": "online",
+    "prodSourceLabel": "managed",
+    "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
+    "templateQueueName": "production.push",
+    "maxWorkers": 500,
+    "maxNewWorkersPerCycle":10,
+    "nQueueLimitWorkerRatio": 500,
+    "nQueueLimitWorkerMin":3,
+    "nQueueLimitWorkerMax": 20,
+    "nQueueLimitJobMax":10000,
+    "nQueueLimitJobMin":1200,
+    "nQueueLimitJob": 10000,
+    "nQueueLimitWorker":50,
+
+    "submitter": {
+          "ceQueueName": "rubin_himem",
+          "ceARCGridType": "arc",
+	  "ceHostname": "sdfarcce001.slac.stanford.edu",
+          "ceEndpoint": "https://arcce1.slac.stanford.edu:9443/arex/rest/1.0",
+          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot_push.sdf"
       }
   },
 
@@ -307,7 +478,11 @@
       "nQueueLimitWorker":10000,
 
       "submitter": {
-          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot.sdf"
+          "ceQueueName": "htc",
+          "ceARCGridType": "arc",
+	  "ceHostname": "sdfarcce001.slac.stanford.edu",
+          "ceEndpoint": "https://ccarccelsst01.in2p3.fr:9443/arex/rest/1.0",
+          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot_push.sdf"
       }
   },
 
@@ -316,7 +491,7 @@
       "prodSourceLabel": "test",
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
       "templateQueueName": "production.push",
-      "maxWorkers": 1,
+      "maxWorkers": 3,
       "nQueueLimitWorkerRatio": 500,
       "nQueueLimitWorkerMin":100,
       "nQueueLimitWorkerMax": 500,
@@ -327,8 +502,7 @@
 
       "submitter": {
           "useAtlasGridCE": true,
-          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot.sdf",
-          "x509UserProxy": "/data/harvester/run/x509up_u25606_lsst"
+          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot.sdf"
       }
   },
 
@@ -348,8 +522,7 @@
 
       "submitter": {
           "useAtlasGridCE": true,
-          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot.sdf",
-          "x509UserProxy": "/data/harvester/run/x509up_u25606"
+          "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot.sdf"
       }
   },
 
@@ -363,8 +536,8 @@
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production_k8s.pull",
     "common": {
-      "k8s_yaml_file": "/data/k8s/kube_job.yaml",
-      "k8s_config_file": "/data/gcloud_config_rubin/highmem",
+      "k8s_yaml_file": "/data/harvester/k8s/kube_job.yaml",
+      "k8s_config_file": "/data/harvester/gcloud_config_rubin/highmem",
       "k8s_namespace": "default"
     }
   },
@@ -382,8 +555,8 @@
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production_k8s.pull",
     "common": {
-      "k8s_yaml_file": "/data/k8s/kube_job_non_preempt.yaml",
-      "k8s_config_file": "/data/gcloud_config_rubin/highmem-non-preempt",
+      "k8s_yaml_file": "/data/harvester/k8s/kube_job_non_preempt.yaml",
+      "k8s_config_file": "/data/harvester/gcloud_config_rubin/highmem-non-preempt",
       "k8s_namespace": "default"
     }
   },
@@ -396,8 +569,8 @@
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production_k8s.pull",
     "common": {
-      "k8s_yaml_file": "/data/k8s/kube_job.yaml",
-      "k8s_config_file": "/data/gcloud_config_rubin/extra-highmem",
+      "k8s_yaml_file": "/data/harvester/k8s/kube_job.yaml",
+      "k8s_config_file": "/data/harvester/gcloud_config_rubin/extra-highmem",
       "k8s_namespace": "default"
     }
   },
@@ -413,8 +586,8 @@
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production_k8s.pull",
     "common": {
-      "k8s_yaml_file": "/data/k8s/kube_job_non_preempt.yaml",
-      "k8s_config_file": "/data/gcloud_config_rubin/extra-highmem-non-preempt",
+      "k8s_yaml_file": "/data/harvester/k8s/kube_job_non_preempt.yaml",
+      "k8s_config_file": "/data/harvester/gcloud_config_rubin/extra-highmem-non-preempt",
       "k8s_namespace": "default"
     }
   },
@@ -429,8 +602,8 @@
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production_k8s.pull",
     "common": {
-      "k8s_yaml_file": "/data/kube_job.yaml",
-      "k8s_config_file": "/data/gcloud_config_rubin/merge",
+      "k8s_yaml_file": "/data/harvester/k8s/kube_job.yaml",
+      "k8s_config_file": "/data/harvester/gcloud_config_rubin/merge",
       "k8s_namespace": "default"
     }
   },
@@ -443,8 +616,8 @@
   "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
   "templateQueueName": "production_k8s.pull",
   "common": {
-    "k8s_yaml_file": "/data/k8s/kube_job_moderate.yaml",
-    "k8s_config_file": "/data/gcloud_config_rubin/moderatemem",
+    "k8s_yaml_file": "/data/harvester/k8s/kube_job_moderate.yaml",
+    "k8s_config_file": "/data/harvester/gcloud_config_rubin/moderatemem",
     "k8s_namespace": "default"
     }
   },
@@ -462,8 +635,8 @@
   "maxSubmissionAttempts":3,
   "templateQueueName": "production_k8s.pull",
   "common": {
-    "k8s_yaml_file": "/data/k8s/job_dev-prmon.yaml",
-    "k8s_config_file": "/data/gcloud_config_rubin/developmentcluster",
+    "k8s_yaml_file": "/data/harvester/k8s/job_dev-prmon.yaml",
+    "k8s_config_file": "/data/harvester/gcloud_config_rubin/developmentcluster",
     "k8s_namespace": "default"
     }
   }
