add tls secrets

--- a/secrets/templates/bigmon.yaml
+++ b/secrets/templates/bigmon.yaml
@@ -80,4 +80,16 @@ data:
     {{ $.Files.Get $path | b64enc }}
   {{- end }}
 
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "secrets.fullname" . }}-bigmon-tls-certs
+type: kubernetes.io/tls
+data:
+  tls.crt: |-
+    {{ $.Files.Get "files/bigmon_certs/hostcert.pem" | b64enc }}
+  tls.key: |-
+    {{ $.Files.Get "files/bigmon_certs/hostkey.pem" | b64enc }}
+
 {{- end }}
