--- a/secrets/templates/idds.yaml
+++ b/secrets/templates/idds.yaml
@@ -90,4 +90,16 @@ data:
     {{ $.Files.Get $path | b64enc }}
   {{- end }}
 
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "secrets.fullname" . }}-idds-tls-certs
+type: kubernetes.io/tls
+data:
+  tls.crt: |-
+    {{ $.Files.Get "files/idds_certs/hostcert.pem" | b64enc }}
+  tls.key: |-
+    {{ $.Files.Get "files/idds_certs/hostkey.pem" | b64enc }}
+
 {{- end }}
