--- a/secrets/templates/panda.yaml
+++ b/secrets/templates/panda.yaml
@@ -67,4 +67,16 @@ stringData:
     {{ $.Files.Get "files/panda_auths/auth_config.json.template" | replace "ID" $client.client_id | replace "SECRET" $client.client_secret | replace "URL" $.Values.auth.oidc.config_url | replace "AUDIENCE" $.Values.auth.oidc.audience  | replace "NAME" $client.name }}
   {{ end }}
 
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "secrets.fullname" . }}-panda-tls-certs
+type: kubernetes.io/tls
+data:
+  tls.crt: |-
+    {{ $.Files.Get "files/panda_certs/hostcert.pem" | b64enc }}
+  tls.key: |-
+    {{ $.Files.Get "files/panda_certs/hostkey.pem" | b64enc }}
+
 {{- end }}
