--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -120,6 +120,10 @@ bigmon:
       github:
         key: "FIXME"
         secret: "FIXME"
+      indigoiam:
+        key: "FIXME"
+        secret: "FIXME"
+        basePath: "FIXME"
 
 iam:
   enabled: true
