--- a/secrets/templates/iam.yaml
+++ b/secrets/templates/iam.yaml
@@ -94,4 +94,16 @@ data:
     {{ $.Files.Get $path | b64enc }}
   {{- end }}
 
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "secrets.fullname" . }}-iam-tls-certs
+type: kubernetes.io/tls
+data:
+  tls.crt: |-
+    {{ $.Files.Get "files/iam_certs/hostcert.pem" | b64enc }}
+  tls.key: |-
+    {{ $.Files.Get "files/iam_certs/hostkey.pem" | b64enc }}
+
 {{- end }}
