--- a/helm/panda/charts/server/templates/ingress.yaml
+++ b/helm/panda/charts/server/templates/ingress.yaml
@@ -26,7 +26,8 @@ spec:
         - {{ printf "%s.%s" $fullName .domain | quote }}
         {{- end }}
         {{- end }}
-      secretName: {{ .secretName }}
+      # secretName: {{ .secretName }}
+      secretName: {{ .Values.global.secret }}-panda-tls-certs
     {{- end }}
   {{- end }}
   rules:
