--- a/helm/panda/charts/server/templates/ingress.yaml
+++ b/helm/panda/charts/server/templates/ingress.yaml
@@ -1,6 +1,7 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "server.fullname" . -}}
 {{- $svcPort := .Values.service.httpsPort -}}
+{{- $globalSecret := .Values.global.secret -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -27,7 +28,7 @@ spec:
         {{- end }}
         {{- end }}
       # secretName: {{ .secretName }}
-      secretName: {{ .Values.global.secret }}-panda-tls-certs
+      secretName: {{ $globalSecret }}-panda-tls-certs
     {{- end }}
   {{- end }}
   rules:
