fix panda to release jobs

--- a/helm/panda/charts/jedi/panda_jedi_config.json
+++ b/helm/panda/charts/jedi/panda_jedi_config.json
@@ -16,5 +16,9 @@
     },
     "mq": {
         "configFile": "/opt/panda/etc/panda/jedi_mq_config.json"
+    },
+    "watchdog": {
+        "waitForPending": "1",
+	"loopCycle": "60"
     }
 }
