--- a/helm/panda/charts/server/sandbox/panda_mbproxy_config.json
+++ b/helm/panda/charts/server/sandbox/panda_mbproxy_config.json
@@ -22,7 +22,7 @@
     "queues": {
         "panda_jobstatus": {
             "server": "iDDS_mb",
-            "destination": "/topic/panda_idds"
+            "destination": "/queue/panda_idds"
         },
         "panda_jedi": {
             "server": "panda_mb",
