Adding rubin hostname at slac

--- a/helm/bigmon/values/values-lsst.yaml
+++ b/helm/bigmon/values/values-lsst.yaml
@@ -8,6 +8,8 @@ main:
     class: wekafs--sdf-k8s01
     create: false
 
+  hostName: "rubin-panda-bigmon-dev.slac.stanford.edu"
+
   ingress:
     enabled: true
     hosts:
