--- a/secrets/templates/bigmon.yaml
+++ b/secrets/templates/bigmon.yaml
@@ -46,6 +46,7 @@ stringData:
   IDDS_DB_PORT: "{{ .Values.idds.database.port | default "5432" }}"
   IDDS_DB_USER: "{{ .Values.idds.database.user}}"
   IDDS_DB_PASSWORD: "{{ .Values.idds.database.password}}"
+  IDDS_DB_SCHEMA: "{{ .Values.idds.database.schema}}"
 
   IDDS_HOST: "{{ include "idds_ref" . }}-rest"
 
