update db version

--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -111,7 +111,7 @@ bigmon:
       Google:
         key: "FIXME"
         secret: "FIXME"
-      CERN:
+      CERNOIDC:
         key: "FIXME"
         secret: "FIXME"
       AWS:
