--- a/helm/harvester/values/values-lsst.yaml
+++ b/helm/harvester/values/values-lsst.yaml
@@ -7,6 +7,7 @@ harvester:
     class: wekafs--sdf-k8s01
     create: false
     selector: false
+    size: 100Gi
 
   httpProxy: "http://atlsquid.slac.stanford.edu:3128"
   httpsProxy: "http://atlsquid.slac.stanford.edu:3128"
@@ -23,3 +24,4 @@ mariadb:
     class: wekafs--sdf-k8s01
     create: false
     selector: false
+    size: 20Gi
