--- a/helm/panda/values/values-lsst.yaml
+++ b/helm/panda/values/values-lsst.yaml
@@ -7,6 +7,7 @@ jedi:
     class: wekafs--sdf-k8s01
     create: false
     selector: false
+    size: 20Gi
 
   httpProxy: "http://squid.slac.stanford.edu:3128"
   httpsProxy: "http://squid.slac.stanford.edu:3128"
@@ -17,6 +18,7 @@ server:
     class: wekafs--sdf-k8s01
     create: false
     selector: false
+    size: 20Gi
 
   httpProxy: "http://squid.slac.stanford.edu:3128"
   httpsProxy: "http://squid.slac.stanford.edu:3128"
@@ -44,3 +46,4 @@ postgres:
     class: wekafs--sdf-k8s01
     create: false
     selector: false
+    size: 20Gi
