--- a/secrets/templates/harvester.yaml
+++ b/secrets/templates/harvester.yaml
@@ -23,9 +23,7 @@ stringData:
   {{- end}}
 
   HARVESTER_ID: "{{ .Values.harvester.harvesterID }}"
-  {{ if .Values.harvester.useStableCondor }}
-  CONDOR_CHANNEL: ".stable"
-  {{- end }}
+  CONDOR_CHANNEL: ".{{ .Values.harvester.condorChannel }}"
 
   {{ include "set_proxy" . | indent 2 }}
 
