--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -79,8 +79,8 @@ harvester:
     # set only when using an external database
     dbhost: ""
 
-  # use stable condor instead of latest
-  useStableCondor: false
+  # condor channel: 9, stable, or latest
+  condorChannel: "latest"
 
 
 idds:
