--- a/secrets/templates/idds.yaml
+++ b/secrets/templates/idds.yaml
@@ -29,9 +29,9 @@ stringData:
 
   PANDA_BEHIND_REAL_LB: "1"
   PANDA_MONITOR_URL: "https://{{ include "bigmon_ref" . }}-main"
-  PANDA_URL: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.port }}/server/panda"
+  PANDA_URL: "http://{{ include "panda_ref" . }}-server:{{ .Values.panda.port }}/server/panda"
   PANDA_URL_SSL: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.sslPort }}/server/panda"
-  PANDACACHE_URL: "https://{{ .Values.panda.hostName }}:{{ .Values.panda.sslPort }}/server/panda"
+  PANDACACHE_URL: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.sslPort }}/server/panda"
   PANDA_VERIFY_HOST: "{{ .Values.panda.verifyHost}}"
   PANDA_CONFIG_ROOT: "{{ .Values.panda.configRoot}}"
 
