--- a/helm/panda/charts/jedi/sandbox/jedi_msg_proc_config.json
+++ b/helm/panda/charts/jedi/sandbox/jedi_msg_proc_config.json
@@ -30,7 +30,7 @@
         },
         "to-idds": {
             "server": "iDDS_mb",
-            "destination": "/queue/panda_idds"
+            "destination": "/topic/panda_idds"
         },
         "panda_jedi": {
             "server": "internal_mb",
