--- a/helm/harvester/charts/mariadb/templates/deployment.yaml
+++ b/helm/harvester/charts/mariadb/templates/deployment.yaml
@@ -12,6 +12,7 @@ spec:
     storage: {{ .Values.persistentvolume.size }}
   accessModes:
     - ReadWriteMany
+  persistentVolumeReclaimPolicy: Delete
   hostPath:
     path: {{ .Values.persistentvolume.path }}
 ---
