move all idds services into one pod

--- a/helm/idds/values/values-dev.yaml
+++ b/helm/idds/values/values-dev.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 
 rest:
-
+  replicaCount: 2
   iddsServer: panda-idds-dev.cern.ch
 
   ingress:
