--- a/helm/panda/charts/jedi/templates/statefulset.yaml
+++ b/helm/panda/charts/jedi/templates/statefulset.yaml
@@ -3,26 +3,26 @@
 kind: PersistentVolume
 apiVersion: v1
 metadata:
-  name: {{ include "server.fullname" . }}
+  name: {{ include "jedi.fullname" . }}
   labels:
-      {{- include "server.labels" . | nindent 4 }}
+      {{- include "jedi.labels" . | nindent 4 }}
 spec:
   storageClassName: {{ .Values.persistentvolume.class }}
   capacity:
     storage: {{ .Values.persistentvolume.size }}
   accessModes:
     - ReadWriteMany
+  persistentVolumeReclaimPolicy: Delete
   hostPath:
     path: {{ .Values.persistentvolume.path }}
 ---
-{{- end }}
 # pv claim
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{ include "server.fullname" . }}
+  name: {{ include "jedi.fullname" . }}
   labels:
-    {{- include "server.labels" . | nindent 4 }}
+    {{- include "jedi.labels" . | nindent 4 }}
 spec:
   storageClassName: {{ .Values.persistentvolume.class }}
   accessModes:
@@ -33,39 +33,39 @@ spec:
   {{- if .Values.persistentvolume.selector }}
   selector:
     matchLabels:
-      {{- include "server.selectorLabels" . | nindent 6 }}
+      {{- include "jedi.selectorLabels" . | nindent 6 }}
   {{- end }}
 ---
-
+{{- end }}
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
-  name: {{ include "server.fullname" . }}
+  name: {{ include "jedi.fullname" . }}
   labels:
-    {{- include "server.labels" . | nindent 4 }}
+    {{- include "jedi.labels" . | nindent 4 }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
+  serviceName: {{ include "jedi.fullname" . }}
   selector:
     matchLabels:
-      {{- include "server.selectorLabels" . | nindent 6 }}
+      {{- include "jedi.selectorLabels" . | nindent 6 }}
   template:
     metadata:
-
       {{- with .Values.podAnnotations }}
       annotations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "server.selectorLabels" . | nindent 8 }}
+        {{- include "jedi.selectorLabels" . | nindent 8 }}
     spec:
       hostname:  {{ .Release.Name }}
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "server.serviceAccountName" . }}
+      serviceAccountName: {{ include "jedi.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
@@ -75,15 +75,15 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           {{- if .Values.autoStart }}
-          command: [ "/bin/sh", "-c" ]
+          command: ["/bin/sh", "-c"]
           args:
-            - until /usr/pgsql-*/bin/pg_isready -h ${PANDA_DB_HOST} -p 5432; do echo waiting for database; sleep 2; done;
+            - until  /usr/pgsql-*/bin/pg_isready -h ${PANDA_DB_HOST} -p 5432; do echo waiting for database; sleep 2; done;
               cp /opt/panda/sandbox/* /data/panda/;
-              chmod +x /data/panda/init-panda;
-              chmod +x /data/panda/run-panda-crons;
-              chmod +x /data/panda/run-panda-services;
+              chmod +x /data/panda/init-jedi;
+              chmod +x /data/panda/run-jedi-crons;
+              chmod +x /data/panda/run-jedi-services;              
               python /data/panda/process_template.py;
-              /data/panda/run-panda-services;
+              /data/panda/run-jedi-services;
               sleep infinity & wait
           {{- end }}
           ports:
@@ -96,24 +96,18 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
-             - name: {{ include "server.fullname" . }}-logs
-               mountPath: /var/log/panda
-             - name: {{ include "server.fullname" . }}-configjson
-               mountPath: /opt/panda/etc/config_json
-             - name: {{ include "server.fullname" . }}-auth
-               mountPath: /opt/panda/etc/panda/auth
-             - name: {{ include "server.fullname" . }}-sandbox
-               mountPath: /opt/panda/sandbox
-             - name: {{ include "server.fullname" . }}-certs
-               mountPath: /opt/panda/etc/cert
+              - name: {{ include "jedi.fullname" . }}-logs
+                mountPath: /var/log/panda
+              - name: {{ include "jedi.fullname" . }}-configjson
+                mountPath: /opt/panda/etc/config_json
+              - name: {{ include "jedi.fullname" . }}-sandbox
+                mountPath: /opt/panda/sandbox
           envFrom:
             - configMapRef:
-                name: {{ include "server.fullname" . }}-env
+                name: {{ .Release.Name }}-server-env
             - secretRef:
                 name: {{ .Values.global.secret }}-panda-envs
           env:
-            - name: PANDA_SERVER_CONF_SERVERNAME
-              value: {{ include "server.fullname" . }}
             # set no_proxy since $() is resolved not in envFrom section
             - name: no_proxy
               value: $(no_proxy),$(PANDA_IDDS_HOST)
@@ -130,22 +124,35 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       volumes:
-        - name: {{ include "server.fullname" . }}-logs
-          persistentVolumeClaim:
-            claimName: {{ include "server.fullname" . }}
-        - name: {{ include "server.fullname" . }}-configjson
-          configMap:
-              name: {{ include "server.fullname" . }}-configjson
-        - name: {{ include "server.fullname" . }}-auth
-          secret:
-              secretName: {{ .Values.global.secret }}-panda-auth
-        - name: {{ include "server.fullname" . }}-sandbox
+        - name: {{ include "jedi.fullname" . }}-sandbox
           projected:
             sources:
               - configMap:
-                  name: {{ include "server.fullname" . }}-sandbox
+                  name: {{ include "jedi.fullname" . }}-sandbox
               - configMap:
                   name: {{ .Release.Name }}-external-sandbox
-        - name: {{ include "server.fullname" . }}-certs
-          secret:
-              secretName: {{ .Values.global.secret }}-panda-certs
+              - configMap:
+                  name: {{ .Release.Name }}-server-sandbox
+        - name: {{ include "jedi.fullname" . }}-configjson
+          projected:
+            sources:
+              - configMap:
+                  name: {{ include "jedi.fullname" . }}-configjson
+              - configMap:
+                  name: {{ .Release.Name }}-server-configjson
+  {{- if .Values.persistentvolume.create }}
+        - name: {{ include "jedi.fullname" . }}-logs
+          persistentVolumeClaim:
+            claimName: {{ include "jedi.fullname" . }}
+  {{- else }}
+  volumeClaimTemplates:
+    - metadata:
+        name: {{ include "jedi.fullname" . }}-logs
+      spec:
+        storageClassName: {{ .Values.persistentvolume.class }}
+        accessModes:
+          - "ReadWriteOnce"
+        resources:
+          requests:
+            storage: {{ .Values.persistentvolume.size }}
+  {{- end }}
