add harvester statefulset

--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -77,7 +77,7 @@ harvester:
   database:
     password: "FIXME"
     # set only when using an external database
-    dbhost: ""
+    dbhost: "localhost"
 
   # use stable condor instead of latest
   useStableCondor: false
