--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -77,7 +77,8 @@ harvester:
   database:
     password: "FIXME"
     # set only when using an external database
-    dbhost: "localhost"
+    # dbhost: "localhost"
+    dbhost: ""
 
   # condor channel: 9, stable, or latest
   condorChannel: "latest"
