--- a/helm/idds/values/values-lsst.yaml
+++ b/helm/idds/values/values-lsst.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 
 rest:
-
+  replicaCount: 2
   iddsServer: rubin-panda-idds-dev.slac.stanford.edu
 
   # PV: For use cases that users are not allowed to create PV,
@@ -38,4 +38,4 @@ postgres:
   persistentvolume:
     class: wekafs--sdf-k8s01
     create: false
-    size: 30Gi
+    size: 50Gi
