--- a/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
+++ b/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
@@ -56,6 +56,7 @@
     "monitor": {
       "name": "HTCondorMonitor",
       "module": "pandaharvester.harvestermonitor.htcondor_monitor",
+      "submissionHost": "$hostname",
       "cancelUnknown": false
     },
     "sweeper": {
@@ -122,6 +123,7 @@
     "monitor": {
       "name": "HTCondorMonitor",
       "module": "pandaharvester.harvestermonitor.htcondor_monitor",
+      "submissionHost": "$hostname",
       "cancelUnknown": false
     },
     "sweeper": {
