update ccondor spool location

--- a/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
+++ b/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
@@ -27,8 +27,9 @@
       "executableFile": "/opt/harvester/sandbox/lsst.runpilot2-wrapper.sh",
       "x509UserProxy": "/data/harvester/run/x509up_u25606",
       "logDir": "/var/log/condor_logs/${hostname}",
-      "submissionHost": "$hostname",
       "logBaseURL": "https://panda-dev-server/condor_logs/${hostname}",
+      "condorSchedd": "${hostname}",
+      "condorPool": "${hostname}",
       "nProcesses": 8
     },
     "workerMaker": {
@@ -56,7 +57,6 @@
     "monitor": {
       "name": "HTCondorMonitor",
       "module": "pandaharvester.harvestermonitor.htcondor_monitor",
-      "submissionHost": "$hostname",
       "cancelUnknown": false
     },
     "sweeper": {
@@ -93,8 +93,9 @@
       "executableFile": "/opt/harvester/sandbox/lsst.runpilot2-wrapper.sh",
       "x509UserProxy": "/data/harvester/run/x509up_u25606",
       "logDir": "/var/log/condor_logs/$hostname",
-      "submissionHost": "$hostname",
       "logBaseURL": "https://panda-dev-server/condor_logs/$hostname",
+      "condorSchedd": "${hostname}",
+      "condorPool": "${hostname}",
       "nProcesses": 8
     },
     "workerMaker": {
@@ -123,7 +124,6 @@
     "monitor": {
       "name": "HTCondorMonitor",
       "module": "pandaharvester.harvestermonitor.htcondor_monitor",
-      "submissionHost": "$hostname",
       "cancelUnknown": false
     },
     "sweeper": {
@@ -177,7 +177,6 @@
           "x509UserProxy": "/data/harvester/run/x509up_u25606",    
           "proxySecretPath": "/data/harvester/run/x509up_u25606",
           "logDir": "/var/log/condor_logs/$hostname",
-	  "submissionHost": "$hostname",
           "logBaseURL": "https://panda-dev-server/condor_logs/$hostname",
           "cpuAdjustRatio": 90,
           "memoryAdjustRatio": 100,
@@ -230,7 +229,6 @@
           "x509UserProxy": "/data/harvester/run/x509up_u25606",
           "proxySecretPath": "/data/harvester/run/x509up_u25606",
           "logDir": "/var/log/condor_logs/$hostname",
-	  "submissionHost": "$hostname",
           "logBaseURL": "https://panda-dev-server/condor_logs/$hostname",
           "cpuAdjustRatio": 90,
           "memoryAdjustRatio": 100,
